# SAQ-Invent

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: SAQ-Invent.hpp
include/core/: manager.hpp
include/io/: json.hpp
include/registry/: item.hpp  state.hpp  table.hpp
src/: application.cpp  main.cpp
